force-app/main/objects/PS_Order_Product__c.object
<CustomObject>
    <fields>
        <fullName>Invoice_Request__c</fullName>
        <label>Invoice Request</label>
        <referenceTo>Project_Invoice__c</referenceTo>
        <relationshipLabel>PS Order Products</relationshipLabel>
        <relationshipName>PS_Order_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <formula>HYPERLINK(&apos;/&apos;+Order_Product__r.Order.Id, Order_Product__r.Order.OrderNumber,&apos;_self&apos;)</formula>
        <label>Order Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Product__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Order Product</label>
        <referenceTo>OrderItem</referenceTo>
        <relationshipLabel>PS Order Products</relationshipLabel>
        <relationshipName>PS_Order_Products</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PS_Service_End_Date__c</fullName>
        <formula>Order_Product__r.Service_End_Date__c</formula>
        <label>PS Service End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Package__c</fullName>
        <formula>TEXT( Order_Product__r.Package__c)</formula>
        <label>Solution</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <formula>TEXT(Order_Product__r.Platform__c)</formula>
        <label>Platform</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Service_Name__c</fullName>
        <formula>Order_Product__r.Product2.Name</formula>
        <label>Product &amp; Service Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proposition__c</fullName>
        <formula>TEXT( Order_Product__r.Proposition__c)</formula>
        <label>Use-case</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <formula>Order_Product__r.Quantity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Price__c</fullName>
        <formula>Quantity__c  *  Total_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scoped_CPS_days__c</fullName>
        <formula>Order_Product__r.Scoped_CPS_days__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scoped CPS days</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scoped_LPS_days__c</fullName>
        <formula>Order_Product__r.Scoped_LPS_days__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scoped LPS days</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Price__c</fullName>
        <formula>Order_Product__r.UnitPrice</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>PS Order Product</label>
    <nameField>
        <displayFormat>PS-OP-{0000}</displayFormat>
        <label>PS Order Product Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PS Order Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>